[package]
name = "gdextras"
version = "0.1.0"
authors = ["Jonas Hagstedt <hagstedt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.8.0"
# gdnative = { path = "../godot-rust/gdnative" }
rayon = "1.3.0"
euclid = "0.20.7"
